--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "framer-motion": "^10.2.3",
     "next": "13.2.3",
     "react": "18.2.0",
+    "react-copy-to-clipboard": "^5.1.0",
     "react-dom": "18.2.0"
   }
 }
