--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "eslint-config-next": "13.2.3",
     "framer-motion": "^10.2.3",
     "next": "13.2.3",
+    "nextjs-google-analytics": "^2.3.3",
     "openai": "^3.2.1",
     "react": "18.2.0",
     "react-copy-to-clipboard": "^5.1.0",
